[FIX] - 사이드바 토글 버튼 오류 해결

--- a/src/main/resources/templates/account/findId.html
+++ b/src/main/resources/templates/account/findId.html
@@ -74,6 +74,7 @@
         </article>
     </main>
 
+    <div th:replace="/layouts/defaultLayout.html :: commonJs"></div>
     <!-- 사용자 JS -->
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <script>
@@ -93,7 +94,7 @@
                     $(".message_box_fail").css("display", "none");
                     $(".message_success").html("회원님의 아이디는 " + res + " 입니다.");
                 },
-                error: function(request, status, error) {
+                error: function (request, status, error) {
                     $(".message_box_fail").css("display", "block");
                     $(".message_box_success").css("display", "none");
                     $(".message_fail").html(request.responseText);
