--- a/src/main/resources/templates/order/orderForm.html
+++ b/src/main/resources/templates/order/orderForm.html
@@ -271,6 +271,7 @@
         <!-- 상품 정보 -->
     </form>
 
+    <div th:replace="/layouts/defaultLayout.html :: commonJs"></div>
     <!-- 사용자 JS -->
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <script th:inline="javascript">
