--- a/src/main/resources/templates/account/findPass.html
+++ b/src/main/resources/templates/account/findPass.html
@@ -26,7 +26,7 @@
                     </div>
                     <div class="message_box_success alert alert-success alert-dismissible fade show">
                         <i class="xi-check-min me-2"></i><small class="message_success"
-                                                                style="font-size: 14px;"></small>
+                            style="font-size: 14px;"></small>
                         <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
                     </div>
 
@@ -39,29 +39,29 @@
                                     <col style="width:auto;">
                                 </colgroup>
                                 <tbody>
-                                <tr>
-                                    <th scope="row">
-                                        <label for="email">이메일 <span>*</span></label>
-                                    </th>
-                                    <td>
-                                        <div class="id_input_box">
-                                            <input class="user_email" name="email" id="email" type="text">
-                                            가입시 등록한 이메일을 입력하세요.
-                                        </div>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <th scope="row">
-                                        <label for="name">이름 <span>*</span></label>
-                                    </th>
-                                    <td>
-                                        <div class="pass_input_box">
-                                            <input class="user_name" name="name" id="name" type="text">
-                                            가입시 등록한 이름을 입력하세요.
-                                        </div>
-                                    </td>
-                                </tr>
-                                <div class="check_msg text-warning"></div>
+                                    <tr>
+                                        <th scope="row">
+                                            <label for="email">이메일 <span>*</span></label>
+                                        </th>
+                                        <td>
+                                            <div class="id_input_box">
+                                                <input class="user_email" name="email" id="email" type="text">
+                                                가입시 등록한 이메일을 입력하세요.
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th scope="row">
+                                            <label for="name">이름 <span>*</span></label>
+                                        </th>
+                                        <td>
+                                            <div class="pass_input_box">
+                                                <input class="user_name" name="name" id="name" type="text">
+                                                가입시 등록한 이름을 입력하세요.
+                                            </div>
+                                        </td>
+                                    </tr>
+                                    <div class="check_msg text-warning"></div>
                                 </tbody>
                             </table>
                             <div class="btn_box">
@@ -76,9 +76,10 @@
         </article>
     </main>
 
+    <div th:replace="/layouts/defaultLayout.html :: commonJs"></div>
     <!-- 사용자 JS -->
     <script>
-        $(".find_psas_btn").click( function () {
+        $(".find_psas_btn").click(function () {
             let email = $(".user_email").val();
             let name = $(".user_name").val();
 
@@ -94,7 +95,7 @@
                     $(".message_box_fail").css("display", "none");
                     $(".message_success").html("입력하신 이메일로 임시비밀번호가 발송되었습니다.");
                 },
-                error: function(request, status, error) {
+                error: function (request, status, error) {
                     $(".message_box_fail").css("display", "block");
                     $(".message_box_success").css("display", "none");
                     $(".message_fail").html(request.responseText);
