--- a/src/main/resources/templates/account/login.html
+++ b/src/main/resources/templates/account/login.html
@@ -31,8 +31,10 @@
                                 <input id="password" name="password" type="password" placeholder="비밀번호">
                                 <button type="submit">로그인</button>
                                 <div class="form-check mt-2">
-                                    <input class="form-check-input" type="checkbox" id="rememberMe" name="remember-me" checked>
-                                    <label class="form-check-label" style="font-size: 14px" for="rememberMe">로그인 유지</label>
+                                    <input class="form-check-input" type="checkbox" id="rememberMe" name="remember-me"
+                                        checked>
+                                    <label class="form-check-label" style="font-size: 14px" for="rememberMe">로그인
+                                        유지</label>
                                 </div>
                             </form>
                         </div>
@@ -69,3 +71,5 @@
         </article>
     </main>
 </body>
+
+<div th:replace="/layouts/defaultLayout.html :: commonJs"></div>
