--- a/src/main/resources/templates/account/mypage.html
+++ b/src/main/resources/templates/account/mypage.html
@@ -6,108 +6,111 @@
 </head>
 
 <body>
-<main>
-    <div th:replace="/layouts/defaultLayout.html :: sidebar"></div>
+    <main>
+        <div th:replace="/layouts/defaultLayout.html :: sidebar"></div>
 
-    <article class="content">
-        <div th:replace="/layouts/defaultLayout.html :: nav"></div>
+        <article class="content">
+            <div th:replace="/layouts/defaultLayout.html :: nav"></div>
 
-        <!-- mypage section -->
-        <section id="mypage">
-            <div class="container mypage">
-                <div class="mypage_header">
-                    <h2>MYPAGE</h2>
-                    <div class="divider"></div>
-                </div>
-                <div class="mypage_body mt-5">
-                    <div class="bank_book">
-                        <div class="total_order">
+            <!-- mypage section -->
+            <section id="mypage">
+                <div class="container mypage">
+                    <div class="mypage_header">
+                        <h2>MYPAGE</h2>
+                        <div class="divider"></div>
+                    </div>
+                    <div class="mypage_body mt-5">
+                        <div class="bank_book">
+                            <div class="total_order">
+                                <div class="title">
+                                    총 주문 금액
+                                </div>
+                                <div class="cond">
+                                    <span
+                                        th:text="|${#numbers.formatInteger(myPageInfo.totalOrderPrice, 0, 'COMMA')}원|"></span>
+                                </div>
+                            </div>
+                            <div class="total_point">
+                                <div class="title">
+                                    총 적립 금액
+                                </div>
+                                <div class="cond">
+                                    <span
+                                        th:text="|${#numbers.formatInteger(myPageInfo.totalPoint, 0, 'COMMA')}원|"></span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="order_state">
                             <div class="title">
-                                총 주문 금액
+                                <h3>나의 주문처리 현황</h3>
                             </div>
-                            <div class="cond">
-                                <span th:text="|${#numbers.formatInteger(myPageInfo.totalOrderPrice, 0, 'COMMA')}원|"></span>
+                            <div class="state">
+                                <ul>
+                                    <li>
+                                        <strong>입금전</strong>
+                                        <a href="">0</a>
+                                    </li>
+                                    <li>
+                                        <strong>배송준비중</strong>
+                                        <a href="">0</a>
+                                    </li>
+                                    <li>
+                                        <strong>배송중</strong>
+                                        <a href="">0</a>
+                                    </li>
+                                    <li>
+                                        <strong>배송완료</strong>
+                                        <a href="">0</a>
+                                    </li>
+                                </ul>
                             </div>
                         </div>
-                        <div class="total_point">
-                            <div class="title">
-                                총 적립 금액
+                        <div>
+                            <div class="mypage_main">
+                                <ul>
+                                    <li>
+                                        <h3>
+                                            <a th:href="@{/orders}"><span>주문내역 조회</span></a>
+                                        </h3>
+                                        <p><a th:href="@{/orders}">고객님께서 주문하신 상품의 주문내역을 확인하실 수 있습니다.</a></p>
+                                    </li>
+                                    <li>
+                                        <h3>
+                                            <a th:href="@{/account/profile}"><span>회원정보</span></a>
+                                        </h3>
+                                        <p>
+                                            <a th:href="@{/account/profile}">회원이신 고객님의 개인정보를 관리하는 공간입니다.</a>
+                                        </p>
+                                    </li>
+                                    <li>
+                                        <h3>
+                                            <a th:href="@{/cart}"><span>장바구니</span></a>
+                                        </h3>
+                                        <p>
+                                            <a th:href="@{/cart}">장바구니에 등록하신 상품의 목록을 보여드립니다.</a>
+                                        </p>
+                                    </li>
+                                    <li>
+                                        <h3>
+                                            <a href=""><span>게시물 관리</span></a>
+                                        </h3>
+                                        <p>
+                                            <a href="">고객님께서 작성하신 게시물을 관리하는 공간입니다.</a>
+                                        </p>
+                                    </li>
+                                </ul>
                             </div>
-                            <div class="cond">
-                                <span th:text="|${#numbers.formatInteger(myPageInfo.totalPoint, 0, 'COMMA')}원|"></span>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="order_state">
-                        <div class="title">
-                            <h3>나의 주문처리 현황</h3>
-                        </div>
-                        <div class="state">
-                            <ul>
-                                <li>
-                                    <strong>입금전</strong>
-                                    <a href="">0</a>
-                                </li>
-                                <li>
-                                    <strong>배송준비중</strong>
-                                    <a href="">0</a>
-                                </li>
-                                <li>
-                                    <strong>배송중</strong>
-                                    <a href="">0</a>
-                                </li>
-                                <li>
-                                    <strong>배송완료</strong>
-                                    <a href="">0</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div>
-                        <div class="mypage_main">
-                            <ul>
-                                <li>
-                                    <h3>
-                                        <a th:href="@{/orders}"><span>주문내역 조회</span></a>
-                                    </h3>
-                                    <p><a th:href="@{/orders}">고객님께서 주문하신 상품의 주문내역을 확인하실 수 있습니다.</a></p>
-                                </li>
-                                <li>
-                                    <h3>
-                                        <a th:href="@{/account/profile}"><span>회원정보</span></a>
-                                    </h3>
-                                    <p>
-                                        <a th:href="@{/account/profile}">회원이신 고객님의 개인정보를 관리하는 공간입니다.</a>
-                                    </p>
-                                </li>
-                                <li>
-                                    <h3>
-                                        <a th:href="@{/cart}"><span>장바구니</span></a>
-                                    </h3>
-                                    <p>
-                                        <a th:href="@{/cart}">장바구니에 등록하신 상품의 목록을 보여드립니다.</a>
-                                    </p>
-                                </li>
-                                <li>
-                                    <h3>
-                                        <a href=""><span>게시물 관리</span></a>
-                                    </h3>
-                                    <p>
-                                        <a href="">고객님께서 작성하신 게시물을 관리하는 공간입니다.</a>
-                                    </p>
-                                </li>
-                            </ul>
                         </div>
                     </div>
                 </div>
-            </div>
-        </section>
+            </section>
 
-        <div th:replace="/layouts/defaultLayout.html :: footer"></div>
-    </article>
-</main>
+            <div th:replace="/layouts/defaultLayout.html :: footer"></div>
+        </article>
+    </main>
 
-<!-- 사용자 JS -->
-<script>
-</script>
+    <div th:replace="/layouts/defaultLayout.html :: commonJs"></div>
+    <!-- 사용자 JS -->
+    <script>
+    </script>
 </body>
