--- a/src/main/resources/templates/account/profile.html
+++ b/src/main/resources/templates/account/profile.html
@@ -24,8 +24,8 @@
                         <button type="button" class="btn-close" data-bs-dismiss="alert"></button>
                     </div>
                     <div class="modify_body mt-5">
-                        <form id="profileFormDto" th:action="@{/account/profile}" th:object="${profileFormDto}" method="post"
-                            onsubmit="return chkPW()">
+                        <form id="profileFormDto" th:action="@{/account/profile}" th:object="${profileFormDto}"
+                            method="post" onsubmit="return chkPW()">
                             <table>
                                 <colgroup>
                                     <col style="width:15%;">
@@ -38,8 +38,8 @@
                                         </th>
                                         <td>
                                             <div class="id_input_box">
-                                                <input class="id_input" th:field="*{userIdentifier}" type="text" minlength="5"
-                                                       maxlength="20" readonly="readonly">
+                                                <input class="id_input" th:field="*{userIdentifier}" type="text"
+                                                    minlength="5" maxlength="20" readonly="readonly">
                                                 (영문 소문자/숫자, 5~20자)
                                             </div>
                                             <span class="id_input_re_1 text-success">사용 가능한 아이디입니다.</span>
@@ -66,8 +66,8 @@
                                         </th>
                                         <td>
                                             <div class="password_confirm_input_box">
-                                                <input class="pwck_input" th:field="*{passwordConfirm}"
-                                                    type="password" minlength="8" maxlength="20">
+                                                <input class="pwck_input" th:field="*{passwordConfirm}" type="password"
+                                                    minlength="8" maxlength="20">
                                                 (영문 대소문자/숫자, 8~20자)
                                             </div>
                                             <span class="pwck_input_re_1 text-success">비밀번호가 일치합니다.</span>
@@ -97,7 +97,8 @@
                                             </div>
                                             <div class="mail_check_box">
                                                 <input class="mail_check_input" disabled="disabled">
-                                                <button type="button" class="check_number" onclick="confirmNumber()">확인</button>
+                                                <button type="button" class="check_number"
+                                                    onclick="confirmNumber()">확인</button>
                                             </div>
                                             <span class="final_mail_ck text-danger">이메일을 입력해주세요.</span>
                                             <span class="need_mail_check text-danger">이메일 인증이 필요합니다.</span>
@@ -110,7 +111,8 @@
                                         <td>
                                             <input th:field="*{address1}" class="address_input_1 mb-1"
                                                 readonly="readonly">
-                                            <button type="button" class="find_addr white_btn_w65_h30" onclick="execution_daum_address()">주소 찾기</button>
+                                            <button type="button" class="find_addr white_btn_w65_h30"
+                                                onclick="execution_daum_address()">주소 찾기</button>
                                             <div class="clearfix"></div>
                                             <input th:field="*{address2}" class="address_input_2 d-block w-50 mb-1"
                                                 readonly="readonly">
@@ -135,6 +137,7 @@
         </article>
     </main>
 
+    <div th:replace="/layouts/defaultLayout.html :: commonJs"></div>
     <!-- 사용자 JS -->
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <script>
@@ -148,7 +151,7 @@
         let mail_check = false;          // 이메일
         let mailnum_check = false;       // 이메일 인증번호 확인
         let address_check = false        // 주소
-        
+
 
         $(document).ready(function () {
             //회원정보수정 버튼(회원정보수정 기능 작동)
