--- a/src/main/resources/templates/cart/cartList.html
+++ b/src/main/resources/templates/cart/cartList.html
@@ -40,14 +40,22 @@
                                 <tbody>
                                     <tr th:each="cartItem : ${cartItems}">
                                         <td class="cart_info">
-                                            <input type="checkbox" class="cart_check" name="cart_check" th:value="${cartItem.cartItemId}">
-                                            <input type="hidden" class="price_hidden_input" th:value="${cartItem.price}">
-                                            <input type="hidden" class="salePrice_hidden_input" th:value="${cartItem.salePrice}">
-                                            <input type="hidden" th:id="${'hiddenCount_' + cartItem.cartItemId}" class="count_hidden_input" th:value="${cartItem.count}">
-                                            <input type="hidden" class="totalPrice_hidden_input" th:value="${cartItem.salePrice * cartItem.count}">
-                                            <input type="hidden" class="point_hidden_input" th:value="${cartItem.point}">
-                                            <input type="hidden" class="totalPoint_hidden_input" th:value="${cartItem.totalPoint}">
-                                            <input type="hidden" th:id="${'hiddenItemId_' + cartItem.cartItemId}" class="itemId_hidden_input" th:value="${cartItem.itemId}">
+                                            <input type="checkbox" class="cart_check" name="cart_check"
+                                                th:value="${cartItem.cartItemId}">
+                                            <input type="hidden" class="price_hidden_input"
+                                                th:value="${cartItem.price}">
+                                            <input type="hidden" class="salePrice_hidden_input"
+                                                th:value="${cartItem.salePrice}">
+                                            <input type="hidden" th:id="${'hiddenCount_' + cartItem.cartItemId}"
+                                                class="count_hidden_input" th:value="${cartItem.count}">
+                                            <input type="hidden" class="totalPrice_hidden_input"
+                                                th:value="${cartItem.salePrice * cartItem.count}">
+                                            <input type="hidden" class="point_hidden_input"
+                                                th:value="${cartItem.point}">
+                                            <input type="hidden" class="totalPoint_hidden_input"
+                                                th:value="${cartItem.totalPoint}">
+                                            <input type="hidden" th:id="${'hiddenItemId_' + cartItem.cartItemId}"
+                                                class="itemId_hidden_input" th:value="${cartItem.itemId}">
                                         </td>
                                         <td class="thumb">
                                             <a th:href="${'/item/' + cartItem.cartItemId}">
@@ -95,8 +103,10 @@
                                             <span class="text">(30,000원 이상 무료)</span>
                                         </td>
                                         <td>
-                                            <button th:data-id="${cartItem.cartItemId}" class="black_btn_w90_h30 order_btn" type="button">주문하기</button>
-                                            <button th:data-id="${cartItem.cartItemId}" type="button" class="white_btn_w90_h30" onclick="deleteCartItem(this)">삭제</button>
+                                            <button th:data-id="${cartItem.cartItemId}"
+                                                class="black_btn_w90_h30 order_btn" type="button">주문하기</button>
+                                            <button th:data-id="${cartItem.cartItemId}" type="button"
+                                                class="white_btn_w90_h30" onclick="deleteCartItem(this)">삭제</button>
                                         </td>
                                     </tr>
                                 </tbody>
@@ -185,6 +195,7 @@
     <form action="/order" method="get" class="order_form">
     </form>
 
+    <div th:replace="/layouts/defaultLayout.html :: commonJs"></div>
     <!-- 사용자 JS -->
     <script th:inline="javascript">
         $(document).ready(function () {
@@ -218,7 +229,7 @@
             let orderNum = 0;
 
             $(".cart_info").each(function (index, element) {
-                if($(element).find(".cart_check").is(":checked") === true) {
+                if ($(element).find(".cart_check").is(":checked") === true) {
 
                     let itemId = $(element).find(".itemId_hidden_input").val();
                     let count = $(element).find(".count_hidden_input").val();
